--- a/src/app/Components/forgot-password/forgot-password.component.html
+++ b/src/app/Components/forgot-password/forgot-password.component.html
@@ -1,87 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<style>
-  .logo-container {
-    text-align: center;
-    transform: translateY(250px);
-  }
-  .logo-container img {
-    width: 200px; /* Adjust this value as needed */
-  }
-</style>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
-  <!-- MDBootstrap CSS -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.css" rel="stylesheet">
-  <!-- Custom CSS -->
-  <style>
+<div class="screen-1">
+  <div class="logo-container">
+    <img src="./assets/lawyersoft-high-resolution-logo-transparent.png" alt="Logo" />
+  </div>
+  <form (ngSubmit)="sendResetLink()" [formGroup]="forgotPasswordForm">
+    <div  class="password-reset">
+      <h3>Password Reset</h3>
+      <p>To reset your password, enter the email address you use to sign in </p>
+      <label for="Email">Email</label>
+      <div class="sec-2">
 
-  </style>
-</head>
-<body>
-<section class="vh-100">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-6 text-black">
-        <div class="logo-container">
-          <img src="../../../assets/lawyersoft-high-resolution-logo-transparent.png" alt="Logo"/>
-        </div>
-        <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
 
-          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-          <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-          <div class="form-gap"></div>
-          <div class="container">
-            <div class="row">
-              <div class="col-md-4 col-md-offset-4">
-                <div class="panel panel-default">
-                  <div class="panel-body">
-                    <div class="text-center">
-                      <h3><i class="fa fa-lock fa-4x"></i></h3>
-                      <h2 class="text-center">Forgot Password?</h2>
-                      <p>You can reset your password here.</p>
-                      <div class="panel-body">
-
-                        <form id="register-form" role="form" autocomplete="off" class="form" (ngSubmit)="sendResetLink()" [formGroup]="forgotPasswordForm">
-
-                          <div class="form-group">
-                            <div class="input-group">
-                              <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
-                              <input id="email" formControlName="email" placeholder="email address" class="form-control" type="email">
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <input name="recover-submit" class="btn btn-lg btn-primary btn-block" value="Reset Password" type="submit">
-                          </div>
-
-                          <input type="hidden" class="hide" name="token" id="token" value="">
-                        </form>
-
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6 px-0 d-none d-sm-block">
-        <img src="../../../assets/4.jpg" alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">
-
+        <input class="form-control" type="email" id="email" formControlName="email" placeholder="E-mail Address" required>
       </div>
     </div>
+
+
+    <div class="form-button full-width">
+      <button id="submit" type="submit" class="ibtn btn-forget">Send Reset Link</button>
+    </div>
+  </form>
+  <div class="footer">
+    <a href="/register">Sign up</a>
+    <a href="/forgotPassword">Forgot Password?</a>
   </div>
-</section>
-<!-- Bootstrap JS and dependencies -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<!-- MDBootstrap JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.js"></script>
-</body>
-</html>
+</div>
