--- a/src/app/Components/Lawyer/invoice/invoice.component.html
+++ b/src/app/Components/Lawyer/invoice/invoice.component.html
@@ -35,34 +35,92 @@
 </head>
 
 <body>
+<div class="sidebar px-4 py-4 py-md-5 me-0 d-md-block d-none" id="sidebar">
+  <div class="d-flex flex-column h-100">
+    <a class="mb-0 brand-icon">
+      <span class="logo-icon">
+        <img src="../../../../assets/lawyersoft-high-resolution-logo-transparent.png"
+             style="width: 200px; height:150px;" />
+      </span>
+    </a>
+
+    <ul class="menu-list flex-grow-1 mt-3">
+      <li>
+        <a style="color:white;" class="m-link" [routerLink]="['/lawyer', lawyerId]">
+          <mat-icon>home</mat-icon> <span>Dashboard</span>
+        </a>
+      </li>
+      <li>
+        <a style="color:white;" class="m-link" [routerLink]="['/lawyer', lawyerId, 'clients']">
+          <mat-icon>people</mat-icon> <span>Clients</span>
+        </a>
+      </li>
+      <li>
+        <a style="color:white;" class="m-link" [routerLink]="['/lawyer', lawyerId, 'cases']">
+          <mat-icon>gavel</mat-icon> <span>Cases</span>
+        </a>
+      </li>
+      <li>
+        <a style="color:white;" class="m-link" [routerLink]="['/lawyer', lawyerId, 'consultations']">
+          <mat-icon>event</mat-icon> <span>Consultations</span>
+        </a>
+      </li>
+      <li>
+        <a style="color:white;" class="m-link" [routerLink]="['/lawyer', lawyerId, 'assistant']">
+          <mat-icon>group</mat-icon> <span>Assistant</span>
+        </a>
+      </li>
+      <li>
+        <a style="color:white;" class="m-link" [routerLink]="['/lawyer', lawyerId, 'invoice']">
+          <mat-icon>description</mat-icon> <span>Invoice</span>
+        </a>
+      </li>
+    </ul>
+
+    <button class="btn btn-danger" (click)="onLogout()" style="background-color:#dc2f2f;color:white">
+      Logout <mat-icon>exit_to_app</mat-icon>
+    </button>
+  </div>
+</div>
+<button class="d-md-none"
+        style="position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 1050;
+    color: white;
+    background-color: #2c3e50;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;"
+        (click)="toggleSidebar()">
+  ☰
+</button>
+
 <header class="navbar sticky-top flex-md-nowrap">
   <div class="col-md-3 col-lg-3 me-0 px-3 fs-6">
-
   </div>
 
-  <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
 
 
-
-  <div class="navbar-nav me-lg-2">
+  <div class="navbar-nav me-lg-2" >
     <div class="nav-item text-nowrap d-flex align-items-center">
-      <div class="dropdown ps-3">
+      <div class="dropdown ps-3 position-relative">
         <a class="nav-link dropdown-toggle text-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="navbarLightDropdownMenuLink">
           <i class="bi-bell fs-3"></i>
           <span class="position-absolute start-100 translate-middle p-1 bg-danger border border-light rounded-circle">
-                                <span class="visually-hidden">New alerts</span>
-                            </span>
+            <span class="visually-hidden">New alerts</span>
+          </span>
         </a>
 
-        <ul class="dropdown-menu dropdown-menu-lg-end notifications-block-wrap bg-white shadow" aria-labelledby="navbarLightDropdownMenuLink">
+        <!-- Dropdown menu with max-width and overflow control -->
+        <ul class="dropdown-menu dropdown-menu-end notifications-block-wrap bg-white shadow" aria-labelledby="navbarLightDropdownMenuLink" >
           <small>Notifications</small>
 
-          <li *ngFor="let notification of notifications | slice:0:4" class="notifications-block border-bottom pb-2 mb-2">
+          <li *ngFor="let notification of notifications" class="notifications-block border-bottom pb-2 mb-2">
             <a class="dropdown-item d-flex align-items-center" href="javascript:void(0);">
-              <div class="notifications-icon-wrap" [ngClass]="notification.title === 'Reminder' ? 'bg-info' : 'bg-warning'">
-                <i class="notifications-icon" [ngClass]="notification.title === 'Reminder' ? 'bi-alarm-fill' : 'bi-envelope-fill'"></i>
+              <div class="notifications-icon-wrap bg-warning">
+                <i class="notifications-icon bi-envelope-fill"></i>
               </div>
 
               <div class="ms-2">
@@ -94,50 +152,19 @@
             </a>
           </li>
 
-          <li *ngFor="let hearing of reminder" class="notifications-block border-bottom pb-2 mb-2">
-            <a class="dropdown-item d-flex align-items-center" href="#">
-              <div class="notifications-icon-wrap bg-info">
-                <i class="notifications-icon bi-folder"></i>
-              </div>
-
-              <div class="ms-2">
-                <span>Upcoming hearing: {{ hearing.title }}</span>
-                <p>{{ hearing.start | date:'short' }}</p>
-              </div>
-            </a>
-          </li>
-
-          <!-- Load More Button -->
-          <div class="text-center mt-3">
-            <button class="btn btn-primary" (click)="loadMoreNotifications()">Load More</button>
-          </div>
-
-
-
-          <li class="notifications-block">
-            <a class="dropdown-item d-flex align-items-center" href="#">
-              <div class="notifications-icon-wrap bg-danger">
-                <i class="notifications-icon bi-question-circle"></i>
-              </div>
-
-              <div>
-                <span>Account verification failed.</span>
-
-                <p>1 hour ago</p>
-              </div>
-            </a>
-          </li>
         </ul>
       </div>
-      <div class="dropdown px-3">
-        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          <img [src]="imageUrl || 'http://bootdey.com/img/Content/avatar/avatar1.png'" class="profile-image img-fluid" alt=""style="width: 50px; height: 50px; border-radius: 25%; object-fit: cover;">
-        </a>
-        <ul class="dropdown-menu bg-white shadow">
-          <li>
-            <div class="dropdown-menu-profile-thumb d-flex">
-              <img [src]="imageUrl || 'http://bootdey.com/img/Content/avatar/avatar1.png'" class="profile-image img-fluid me-3" alt="">
 
+      <div class="dropdown px-3 position-relative">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <img [src]="imageUrl || 'http://bootdey.com/img/Content/avatar/avatar1.png'" class="profile-image" alt="" style="width: 50px; height: 50px; border-radius: 25%; object-fit: cover;">
+        </a>
+
+        <!-- Dropdown menu with max-width and overflow control -->
+        <ul class="dropdown-menu dropdown-menu-end bg-white shadow" style="max-width: 250px; width: auto; padding: 10px 0; overflow-x: hidden;">
+          <li>
+            <div class="dropdown-menu-profile-thumb d-flex" style="padding: 8px;">
+              <img [src]="imageUrl || 'http://bootdey.com/img/Content/avatar/avatar1.png'" class="profile-image img-fluid me-3" alt="" style="width: 40px; height: 40px; object-fit: cover;">
               <div class="d-flex flex-column">
                 <small>{{ lawyer?.firstName }}</small>
                 <a href="#">{{lawyer?.email}}</a>
@@ -172,77 +199,11 @@
               Logout
             </a>
           </li>
-
         </ul>
       </div>
-
     </div>
   </div>
 </header>
-<div class="sidebar px-4 py-4 py-md-5 me-0"
-
-
-
->
-  <div class="d-flex flex-column h-100">
-    <a class="mb-0 brand-icon">
-<span class="logo-icon">
-<img src="../../../../assets/lawyersoft-high-resolution-logo-transparent.png" style="width: 200px; height:150px; " />
-
-</span>
-
-
-    </a>
-    <ul class="menu-list flex-grow-1 mt-3">
-      <li>
-        <a style="color:white" class="m-link" data-bs-toggle="collapse" data-bs-target="#dashboard-Components" [routerLink]="['/lawyer', lawyerId]">
-          <i class="icofont-home fs-5"></i> <mat-icon>home</mat-icon><span>Dashboard</span>
-          <span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span>
-        </a>
-
-      </li>
-      <li>
-        <a style="color:white" class="m-link" [routerLink]="['/lawyer', lawyerId, 'clients']">
-          <i class="icofont-briefcase"></i> <mat-icon>people</mat-icon> <span>Clients</span>
-        </a>
-      </li>
-
-      <li>
-        <a style="color:white" class="m-link" data-bs-toggle="collapse" data-bs-target="#ticket-Components" [routerLink]="['/lawyer', lawyerId, 'cases']">
-          <i class="icofont-ticket"></i><mat-icon>gavel</mat-icon> <span>Cases</span>
-          <span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span>
-        </a>
-      </li>
-
-      <li>
-        <a style="color:white" class="m-link" data-bs-toggle="collapse" data-bs-target="#ticket-Components" [routerLink]="['/lawyer', lawyerId, 'consultations']">
-          <i class="icofont-ticket"></i><mat-icon>event</mat-icon> <span>Consultations</span>
-          <span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span>
-        </a>
-      </li>
-      <li>
-        <a style="color:white" class="m-link" data-bs-toggle="collapse" data-bs-target="#team-Components" [routerLink]="['/lawyer', lawyerId, 'assistant']">
-          <i class="icofont-users-alt-5"></i> <mat-icon>group</mat-icon> <span>Assistant</span>
-          <span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span>
-        </a>
-      </li>
-      <li>
-        <a style="color:white" class="m-link" data-bs-toggle="collapse" data-bs-target="#team-Components" [routerLink]="['/lawyer', lawyerId, 'invoice']">
-          <i class="icofont-users-alt-5"></i><mat-icon>description</mat-icon>
-          <span>Invoice</span>
-          <span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span>
-        </a>
-      </li>
-    </ul>
-    <button class="btn btn-danger" (click)="onLogout()" style="background-color:#dc2f2f;color:white">
-      Logout
-      <span class="ms-2">
-    <mat-icon style="vertical-align: middle;">exit_to_app</mat-icon>
-  </span>
-    </button>
-
-  </div>
-</div>
 
 <main class="main-wrapper col-md-9 ms-sm-auto py-4 col-lg-9 px-md-4" style="display: flex; justify-content: center; align-items: center; width: 100%; padding: 20px;">
   <div class="custom-block" style="width: 100%; max-width: 1600px; margin: 0 auto; background-color: #ececec !important; ">
