--- a/src/app/Components/Lawyer/lawyer-clients/lawyer-clients.component.css
+++ b/src/app/Components/Lawyer/lawyer-clients/lawyer-clients.component.css
@@ -351,8 +351,33 @@
     z-index: 100;
     padding: 58px 0 0;
     color: white;
+    transition: transform 0.3s ease-in-out;
+
+  }
+  @media (max-width: 768px) {
+    .sidebar {
+      transform: translateX(-100%);
+      position: fixed;
+    }
   }
 
+  @media (max-width: 576px) {
+    .dropdown-menu {
+      position: absolute !important;
+      bottom: auto !important;
+      top: 100% !important;
+      left: auto !important;
+      right: 10px !important; /* Keeps it aligned properly */
+    }
+  }
+
+
+
+
+  /* When Sidebar is Active */
+  .sidebar.active {
+    transform: translateX(0);
+  }
   .sidebar-sticky {
     height: calc(100vh - 58px);
     overflow-x: hidden;
