--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -1,79 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
+<div class="screen-1">
+  <div class="logo-container">
+    <img src="./assets/lawyersoft-high-resolution-logo-transparent.png" alt="Logo" />
+  </div>
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+  <div class="email">
+    <label for="Email">Email</label>
+    <div class="sec-2">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
-  <!-- MDBootstrap CSS -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.css" rel="stylesheet">
-  <!-- Custom CSS -->
-</head>
+      <div *ngIf="loginForm.get('email')?.invalid && (loginForm.get('email')?.dirty || loginForm.get('email')?.touched)">
+        <small *ngIf="loginForm.get('email')?.errors?.['required']">Email is required</small>
+        <small *ngIf="loginForm.get('email')?.errors?.['email']">Email should be valid</small>
+      </div>      <input type="email" id="email" formControlName="email" placeholder="E-mail Address" required />
+    </div>
+  </div>
 
-<body>
-<section class="vh-100">
-  <div class="container-fluid" style="background-image: url('./assets/DeWatermark.ai_1726144463135.png'); background-size: cover; background-position: center;min-height: 100vh;">
-    <div class="row no-gutters">
-      <!-- Form Section -->
-      <div class="col-sm-6 text-white d-flex align-items-center justify-content-center">
-        <div class="d-flex h-custom-2 align-items-center">
-          <form class="login-form text-center" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-            <!-- Logo Moved Inside Form -->
-            <div class="logo-container mb-5">
-              <img src="../../../assets/lawyersoft-high-resolution-logo-transparent.png" alt="Logo" style="width: 200px;" />
-            </div>
-
-            <h3 class="fw-normal pb-3" style="letter-spacing: 1px;">Log in</h3>
-
-            <div class="form-outline">
-              <!-- Label Above Input -->
-              <label class="form-label" for="email">Email address</label>
-              <input type="email" id="email" formControlName="email" class="form-control form-control-lg" placeholder="" />
-              <div *ngIf="loginForm.get('email')?.invalid && (loginForm.get('email')?.dirty || loginForm.get('email')?.touched)">
-                <small *ngIf="loginForm.get('email')?.errors?.['required']">Email is required</small>
-                <small *ngIf="loginForm.get('email')?.errors?.['email']">Email should be valid</small>
-              </div>
-            </div>
-
-            <div class="form-outline">
-              <!-- Label Above Input -->
-              <label class="form-label" for="password">Password</label>
-              <input type="password" id="password" formControlName="password" class="form-control form-control-lg" placeholder=" " />
-              <div *ngIf="loginForm.get('password')?.invalid && (loginForm.get('password')?.dirty || loginForm.get('password')?.touched)">
-                <small *ngIf="loginForm.get('password')?.errors?.['required']">Password is required</small>
-                <small *ngIf="loginForm.get('password')?.errors?.['minlength']">Password must be at least 6 characters long</small>
-              </div>
-            </div>
-
-
-
-            <div class="form-gap"></div>
-
-            <div class="pt-1 mb-4">
-              <button class="btn btn-primary w-100" type="submit" [disabled]="loginForm.invalid">SIGN IN</button>
-            </div>
-
-            <p class="small"><a href="/forgotPassword" class="text-muted">Forgot password?</a></p>
-            <p>Don't have an account? <a href="/register" class="link-info">Register here</a></p>
-          </form>
-        </div>
-      </div>
-
-      <!-- Background Image Section -->
-      <div class="col-sm-6 d-none d-sm-block px-0 bg-image-vertical">
-        <!-- The image will be applied via CSS -->
+  <div class="password">
+    <label for="password">Password</label>
+    <div class="sec-2">
+      <input class="form-control" type="password" id="password" formControlName="password" placeholder="Password" required>
+      <div *ngIf="loginForm.get('password')?.invalid && (loginForm.get('password')?.dirty || loginForm.get('password')?.touched)">
+        <small *ngIf="loginForm.get('password')?.errors?.['required']">Password is required</small>
+        <small *ngIf="loginForm.get('password')?.errors?.['minlength']">Password must be at least 6 characters long</small>
       </div>
     </div>
   </div>
-</section>
 
-<!-- Bootstrap JS and dependencies -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<!-- MDBootstrap JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.js"></script>
-</body>
-</html>
+  <button id="submit" type="submit" class="login" [disabled]="loginForm.invalid">Login</button>
+</form>
+  <div class="footer">
+    <a href="/register">Sign up</a>
+    <a href="/forgotPassword">Forgot Password?</a>
+  </div>
+</div>
